# automated_researcher

./: .gitignore  config.py  pyproject.toml  requirements.txt  sql_backend.app.db
Claude_code/backend_connected/files/: api_client.dart  app_providers.dart  app_router.dart  chat_screen.dart  dashboard_screen.dart  desktop_active_jobs_screen.dart  desktop_card.dart  desktop_dashboard_screen.dart  desktop_knowledge_base_screen.dart  desktop_new_research_screen.dart  desktop_providers.dart  desktop_reports_screen.dart  desktop_settings_screen.dart  desktop_shell.dart  desktop_sidebar.dart  desktop_theme.dart  desktop_top_bar.dart  history_screen.dart  job_providers.dart  job_status_badge.dart  login_screen.dart  main.dart  main_shell.dart  primary_button.dart  profile_screen.dart  progress_screen.dart  pubspec.yaml  report.dart  report_providers.dart  report_screen.dart  report_viewer_screen.dart  (+5 more)
backend/: README.md  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/backend/: README.md  sql_app.db
backend_old/app/: main.py
claude_code_files/files/: .flutter-plugins-dependencies  api_client.dart  app_providers.dart  app_theme.dart  chat_screen.dart  citation.dart  job_service.dart  primary_button.dart  progress_bar.dart  progress_screen.dart  pubspec.yaml  report.dart  report_providers.dart  report_screen.dart  research_job.dart  skeleton_loader.dart  source_document.dart  sources_screen.dart
uiux/automated_researcher/: README.md  pubspec.yaml
uiux/ui_laptop/: README.md  pubspec.yaml
uiux/ui_laptop_2/: firebase.json  pubspec.yaml
(+188 files in other folders)
